# orbit-agent

./: .env.example  .gitignore  LICENSE  README.md  install.ps1  install.sh  pyproject.toml  requirements.txt  sitecustomize.py
data/: routines.json
orbit_agent/cli/: main.py  onboard.py
orbit_agent/config/: config.py
orbit_agent/core/: agent.py  guardrail.py  planner.py  trace.py  voice.py
orbit_agent/gateway/: __init__.py  http_server.py  identity.py  main.py  moltbook_social.py  moltbook_state.py
orbit_agent/gui/: browser.py  main.py
orbit_agent/memory/: base.py  decision.py  long_term.py  routine.py  short_term.py  ui_cache.py  workspace_context.py
orbit_agent/models/: base.py  openai_client.py  router.py
orbit_agent/permissions/: manager.py
orbit_agent/skills/: apps.py  base.py  browser.py  chat.py  code_analysis.py  code_search.py  coding.py  desktop.py  edit.py  file.py  moltbook.py  registry.py  shell.py  skill_create.py  som_vision.py  structured_edit.py  vision.py  visual_interaction.py  web_browse.py  web_search.py
orbit_agent/tasks/: engine.py  models.py
orbit_agent/tests/: test_advanced_skills.py  test_desktop.py  test_flow.py  test_skills.py
orbit_agent/uplink/: __init__.py  main.py  profile.py  scheduler.py  telegram_bot.py  workflows.py
scripts/: install_uplink_autostart.ps1
